  - Dynamics optimizations (by mtsamis)

Bug Fixes:
  - Bug fix for HalfEllipse.getRadius(Vector2) when the half width < half
    height and the given point is below the evolute.
  - Bug fix for the initial transform not updating if CCD is turned off
  - Bug fix for strange code in position solver
  - Bug fix for wrong raycast results when using vertical segment/link shapes
    
Deprecated:
  
Breaking Changes:
  - double getRotation() methods were replaced with Rotation getRotation()
    methods. Use the getRotationAngle() method instead.
  
Other:
  - Updated broadphase tests (by mtsamis)

===============================================================================
Version 3.3.0
===============================================================================
New Features:
  - Performance improvements for Android
  - Java 9 modules support (by io7m)
  - OSGi support (by io7m)
  - More control of iteration count and epsilon values in the GJK algorithm
  - Proper Maven-ization of the project with automated building, testing, and
    packaging  (by io7m)
  - Added an enabled flag for the ContactConstraint class to allow contacts
    to be temporarily turned off, but still warm started and tracked.

Bug Fixes:
  - The GJK algorithm hanging in rare cases
    
Deprecated:
  - ContactListener.sensed method has been deprecated.  Sensor events are sent
    to the ContactListener.begin, ContactListener.persist, and 
    ContactListener.end methods instead with a sensor flag.
    NOTE: The ContactListener.sensed method still exists, but is no longer 
    called.
  - SimpleContactManager was combined with WarmStartingContactManager into
    DefaultContactManager. You can turn off warm starting via the
    setWarmStartingEnabled(boolean) method.
  
Breaking Changes:
  - The ContactListener.sensed method is no longer called.
  
Other:
  - Some other small performance enhancements

===============================================================================
Version 3.2.4