@@ -184,6 +184,7 @@ geometry.polygon.nullVertices=The vertices array cannot contain null points.
 geometry.polygon.coincidentVertices=A polygon cannot have coincident vertices.
 geometry.polygon.nonConvex=A polygon must be convex.
 geometry.polygon.invalidWinding=A polygon must have Counter-Clockwise vertex winding.
+geometry.polygon.zeroArea=A polygon cannot have zero area.
 
 # Rectangle
 geometry.rectangle.invalidWidth=A rectangle must have a positive non-zero width.
