@@ -17,12 +17,18 @@ Bug Fixes:
   - Bug fix for the initial transform not updating if CCD is turned off
   - Bug fix for strange code in position solver
   - Bug fix for wrong raycast results when using vertical segment/link shapes
+  - Bug fix for Polygon.contains when the given point is coincident with
+  	an edge of the polygon
+  - Bug fixes for the SweepLine algorithm where it would produce incorrect
+  	results
     
 Deprecated:
   
 Breaking Changes:
   - double getRotation() methods were replaced with Rotation getRotation()
     methods. Use the getRotationAngle() method instead.
+  - The Polygon class now checks for degenerate (zero area) polygons and
+    throws an IllegalArgumentException when detected
   
 Other:
   - Updated broadphase tests (by mtsamis)
